# crtcli

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  crtcli.sln  install-unix.sh  install-windows.ps1  uninstall-unix.sh  uninstall-windows.ps1
.github/workflows/: release.yml  test-install-scripts.yml
src/: main.rs
src/app/: app_installer.rs  auth.rs  client.rs  cookie_cache.rs  install_log_watcher.rs  mod.rs  package.rs  package_installer.rs  session.rs  session_cache.rs  utils.rs  workspace_explorer.rs
src/app/sql/: mod.rs  runner.rs  scripts.rs
src/cmd/: cli.rs  mod.rs  utils.rs
src/cmd/app/: compile.rs  flush_redis.rs  install_log.rs  mod.rs  pkgs.rs  request.rs  restart.rs  sql.rs
src/cmd/app/fs/: check_fs.rs  mod.rs  pull_fs.rs  push_fs.rs
src/cmd/app/pkg/: compile_pkg.rs  download_pkg.rs  get_uid_pkg.rs  install_pkg.rs  lock_pkg.rs  mod.rs  pull_pkg.rs  push_pkg.rs  unlock_pkg.rs
src/cmd/pkg/: apply.rs  config_file.rs  mod.rs  pack.rs  unpack.rs  unpack_all.rs
src/crtcli/: Cargo.toml
src/crtcli.dotnet/: Constants.cs  CrtCli.Dotnet.csproj  InternalV2.cs  Program.cs
src/crtcli.dotnet.mocking/: CrtCli.Dotnet.Mocking.csproj  MockingConstants.cs  MockingDependencyInjection.cs  MockingExtensions.cs  MockingLogging.cs
src/crtcli.dotnet.mocking/Core/: ManagerProviderConfigurationElementMock.cs  ManagerProviderConfigurationSectionMock.cs  ManagerProviderMock.cs  ManagerProviderSectionCollectionMock.cs  SchemaManagerProviderConfigurationElementMock.cs  SchemaManagerProviderConfigurationSectionMock.cs  SchemaManagerProviderSectionCollectionMock.cs
src/crtcli.dotnet.mocking/Core/DB/: DBEngineMock.cs  DBExecutorMock.cs  DBTypeConverterMock.cs  DbCommandMock.cs  DbCommandQueryType.cs  DbConnectionMock.cs  DbParameterCollectionMock.cs  DbParameterMock.cs  IDbCommandFactory.cs  IDbCommandMockHandler.cs
src/crtcli.dotnet.mocking/Core/Entities/: EntitySchemaManagerMock.cs
src/crtcli.dotnet.mocking/Core/Process/: ProcessEngineImplMock.cs  ProcessSchemaManagerMock.cs  ProcessSchemaMock.cs  ProcessUserTaskSchemaManagerMock.cs
src/crtcli.dotnet.mocking/Extensions/: AppConnectionExtensions.cs  CoreApiContainerExtensions.cs  DBEngineExtensions.cs  EntityExtensions.cs  GlobalAppSettingsExtensions.cs  PackageExtensions.cs  UserConnectionExtensions.cs
src/crtcli.dotnet/Commands/: DependencyInjection.cs  GeneratePackageSchemaSourcesCommand.cs
src/crtcli.dotnet/Context/: DescriptorWrapper.cs  IPackageContext.cs  IPackageContextAccessor.cs  IPackageSchemaContext.cs  PackageContext.cs  PackageContextAccessor.cs  PackageContextPackageTypeProviderMock.cs  PackageDescriptorExtended.cs  PackageSchemaContext.cs
src/crtcli.dotnet/Context/Exceptions/: CannotFindPackageInContextException.cs  PackageContextNotRegisteredInAccessorException.cs
src/crtcli.dotnet/Database/: DbCommandMockFactory.cs  DbCommandMockHandler.cs  DependencyInjection.cs
src/crtcli.dotnet/Database/Commands/: DependencyInjection.cs  HierarchicalSelect.cs  (+11 more)
src/crtcli.dotnet/Utilities/: DbCommandTextEqualityComparer.cs
src/crtcli.packages.tunneling/: CrtCli.Packages.Tunneling.csproj  Makefile  descriptor.json
src/crtcli.packages.tunneling/Properties/: AssemblyInfo.cs
src/crtcli.packages.tunneling/src/: ITunnelingService.cs  TunnelingAppEventListener.NetFramework.cs  TunnelingAppEventListener.cs  TunnelingService.NetFramework.cs  TunnelingService.NetStandard.cs  TunnelingService.cs
src/crtcli/src/: main.rs
src/crtcli/src/app/: app_installer.rs  auth.rs  client.rs  credentials.rs  install_log_watcher.rs  mod.rs  oauth.rs  package_installer.rs  session.rs  session_cache.rs  tunneling.rs  utils.rs  workspace_explorer.rs
src/crtcli/src/app/sql/: mod.rs  runner.rs  scripts.rs
src/crtcli/src/cfg/: dot.rs  mod.rs  package.rs  workspace.rs
src/crtcli/src/cmd/: cli.rs  mod.rs  utils.rs  workspace_config.rs
src/crtcli/src/cmd/app/: compile.rs  flush_redis.rs  install_log.rs  mod.rs  pkgs.rs  request.rs  restart.rs  sql.rs  tunnel.rs
src/crtcli/src/cmd/app/fs/: check_fs.rs  mod.rs  pull_fs.rs  push_fs.rs
src/crtcli/src/cmd/app/pkg/: compile_pkg.rs  download_pkg.rs  get_uid_pkg.rs  install_pkg.rs  lock_pkg.rs  mod.rs  pull_pkg.rs  push_pkg.rs  unlock_pkg.rs
src/crtcli/src/cmd/app/pkg/fs/: mod.rs  pull_pkg_fs.rs  push_pkg_fs.rs
src/crtcli/src/cmd/pkg/: apply.rs  autogen.rs  mod.rs  pack.rs  unpack.rs  unpack_all.rs
src/crtcli/src/pkg/: apply_features.rs  mod.rs  utils.rs
src/crtcli/src/pkg/bundling/: extractor.rs  mod.rs  packer.rs  pkg_gzip_decoder.rs  pkg_gzip_encoder.rs  pkg_gzip_file.rs  utils.rs
src/crtcli/src/pkg/converters/: bom_normalization.rs  combined_converter.rs  localization_cleanup.rs  mod.rs  sorting.rs
src/crtcli/src/pkg/json/: pkg_data_data.rs  pkg_data_descriptor.rs  pkg_package_descriptor.rs  pkg_schemas_descriptor.rs  pkg_sqlscripts_descriptor.rs
src/crtcli/src/pkg/json-wrappers/: mod.rs  pkg_assemblies_descriptor.rs  pkg_data_data.rs  pkg_data_descriptor.rs  pkg_json_wrapper.rs  pkg_package_descriptor.rs  pkg_resource.rs  pkg_schemas_descriptor.rs
src/crtcli/src/pkg/transforms/: bom_normalization.rs  combined.rs  combined_transform.rs  localization_cleanup.rs  mod.rs  sorting.rs
src/crtcli/src/pkg/transforms/post/: apply_post_features.rs  combined.rs  csproj_pkg_refs_regenerate.rs  mod.rs
src/crtcli/src/pkg/xml/: csproj.rs  mod.rs  resource.rs
src/crtcli/src/pkg/xml-wrappers/: csproj.rs  mod.rs  resource.rs  resource_tests_data.rs  tests.rs  tests_data.rs
src/crtcli/src/pkg/xml/tests_data/: csproj_tests_data.rs  csproj_tests_data_1.rs  mod.rs
src/crtcli/src/utils/: bom.rs  lexical_str.rs  mod.rs
src/pkg/: mod.rs  paths.rs  utils.rs
src/pkg/bundling/: extractor.rs  packer.rs  pkg_gzip_decoder.rs  pkg_gzip_encoder.rs  pkg_gzip_file.rs  utils.rs
src/pkg/converters/: combined_converter.rs  localization_cleanup.rs  mod.rs  sorting.rs
src/pkg/json-wrappers/: mod.rs  pkg_data_data.rs  pkg_json_wrapper.rs  pkg_package_descriptor.rs
src/pkg/xml-wrappers/: csproj.rs  mod.rs  tests.rs
src/utils/: json_msdate_preserve_formatter.rs
(+13 files in other folders)
