[package]
name = "crtcli"
description = "Command-line tool for interacting with Creatio and Creatio packages"
version = "0.1.0"
edition = "2021"
authors = ["heabijay <heabijay@gmail.com>"]
repository = "https://github.com/heabijay/crtcli"
license = "MIT"

[dependencies]
anstyle = "1.0.10"
anstream = "0.6.18"
bincode = "1.3.3"
clap = { version = "4.5.23", features = ["derive", "env", "suggestions", "usage"] }
clap_complete = "4.5.40"
dotenvy = "0.15.7"
flate2 = "1.0.35"
hyper-util = "0.1.10"
quick-xml = "0.37.2"
regex = "1.11.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.134", features = ["preserve_order"] }
thiserror = "2.0.9"
time = { version = "0.3.37", features = ["formatting", "local-offset", "macros"] }
toml = "0.8.19"
walkdir = "2.5.0"
zip = "2.2.2"

[dependencies.reqwest]
version = "0.12.12"
default-features = false
features = ["charset", "blocking", "http2", "macos-system-configuration", "json", "multipart", "rustls-tls"]

[dev-dependencies]
pretty_assertions = "1.4.1"

[profile.dev]
debug = false # Disable debug symbol to speedup dev compilation

[profile.release]
lto = true
strip = true
codegen-units = 1
opt-level = "z"
