[package]
name = "crtcli"
description = "Command-line tool for interacting with Creatio and Creatio packages"
version = "0.2.1"
edition = "2024"
authors = ["heabijay <heabijay@gmail.com>"]
repository = "https://github.com/heabijay/crtcli"
license = "MIT"

[dependencies]
anstream = "0.6.21"
anstyle = "1.0.13"
async-trait = "0.1.89"
bincode = "2.0.1"
crossterm = { version = "0.29.0", features = ["event-stream"] }
clap_complete = "4.5.60"
dotenvy = "0.15.7"
flate2 = "1.1.5"
futures = "0.3.31"
hyper-util = "0.1.18"
indexmap = { version =  "2.12.0", features = ["serde"] }
indicatif = "0.18"
quick-xml = "0.38.4"
rustls = { version = "0.23.35", features = ["ring"] }
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.145", features = ["preserve_order"] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "io-std"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
tokio-util = { version = "0.7.17", features = ["io", "io-util"] }
toml = "0.9.8"
urlencoding = "2.1.3"
walkdir = "2.5.0"
zip = "6.0.0"

[dependencies.clap]
version = "4.5.51"
features = ["derive", "env", "suggestions", "usage"]

[dependencies.time]
version = "0.3.44"
features = ["formatting", "local-offset", "macros"]

[dependencies.reqwest]
version = "0.12.24"
default-features = false
features = [
    "charset",
    "http2",
    "macos-system-configuration",
    "json",
    "multipart",
    "stream",
    "rustls-tls",
]

[dev-dependencies]
pretty_assertions = "1.4.1"
